@@ -1,3 +1,9 @@
+Fri Dec 31 03:23:26 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* vsnprintf.c (BSD__uqtoa): Fix overflow when long != quad_t.
+	  patched by Peter Weldon <peter.weldon AT null.net>
+	  [ruby-core:33985]
+
 Wed Jan  5 12:10:08 2011  Aaron Patterson <aaron@tenderlovemaking.com>
 
 	* Use _WIN32 rather than checking for windows.h.  Thanks Jon Forums!
